@@ -77,6 +77,6 @@ public class BuddyList {
 	}
 
 	public void increaseCapacity(short delta) {
-		capacity += delta;
+		capacity = (short) Math.min(capacity + delta, 0xFF);
 	}
 }
